# GenAI_Project

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Scripts/: split_data.py
archive/notebooks/: caption_preprocessing.ipynb  load_processed_data.ipynb
archive/scripts/: model_runnner.py
data/: flickr30k_padded_caption_sequences.npz  flickr8k_features.npz  flickr8k_padded_caption_sequences.npz
data/processed/: flickr30k_features.npz  flickr30k_padded_caption_sequences.npz  flickr30k_tokenizer.json  flickr30k_tokenizer.pkl  flickr8k_padded_caption_sequences.npz  flickr8k_tokenizer.json  flickr8k_tokenizer.pkl  train_images.txt  val_images.txt
data/raw/: flickr30k_captions.csv  flickr8k_captions.csv
experiments/: README.md  experiment1.ipynb  experiment3.ipynb  experiment4.ipynb
models/: flickr8k_decoder_model.keras  flickr8k_decoder_weights.weights.h5
notebooks/: baseline_modeling_and_evaluation_example.ipynb  caption_preprocessing.ipynb  caption_preprocessing_usage_example.ipynb  data_loader_usage_example.ipynb  decoder_logic.ipynb  evaluation_usage_example.ipynb  exploratory_data_analysis.ipynb  image_preprocessing.ipynb  image_preprocessing_usage_example.ipynb  load_processed_data.ipynb  lstm_decoder_training_.ipynb  modeling_usage_example.ipynb  modeling_usage_example_updated.ipynb  performance_comparison_figures.ipynb
scripts/: check_npz_keys.py  create_features_pkl.py  create_sample_features.py  data_preprocessing_runner.py  model_runner.py  model_runnner.py  train_model.py
src/: __init__.py
src/vtt/: config.py
(+53 files in other folders)
